This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

23-Jun-2009 (Gnomi)
  - Corrected a memory leak in send_udp.
    (comm.c)
  - String corruption by present_clone.
    (efuns.c)

15-Jun-2009 (Fuchur)
  - (parse.c) Fix off-by-one error in find_string(). It returned a wrong index.

30-May-2009 (LDMud Team)  (3.3.719)
  - Created snapshot.

29-May-2009 (Gnomi)
  - (call_out.c) Preserve the order of call_out()s.
  - (mudlib/deprecated/hash.c) Added sefuns md5() and sha1().
  - (configure) Added a bunch of quotation marks.

28-May-2009 (Zesstra)
  - Added sefun cat(), updated documentation of cat().
    To reduce the workload of our users we supply implementations of
    deprecated and removed efuns. This time: the deprecated efun cat().
    (mudlib/deprecated/*)
  - Removed a configure check for ancient gcc on AIX.
  - Added checks to configure for the volatile keyword and VLAs.
  - Check the compiler for support of -fwrapv and enable if supported (enables
    a fully defined overflow/wrap behaviour of signed integers (#635).
  - Support for using mmap() to get memory from the system (slaballoc):
    sbrk() and brk() are obsoleted and some systems (like Darwin) don't have a
    working implementation anymore. If sbrk/brk() are not usable, but mmap()
    is available, use mmap() for mapping anonymous memory which we then use.
    If mmap() is not available, use the old fallback (system malloc()).
    Changed some precompiler checks for SBRK_OK, which should be
    REPLACE_MALLOC. (#640)
    (slaballoc.c, xalloc.c, configure.in)
  - Support for using mmap() to get memory from the system (smalloc). (#640)
    (smalloc.c)
  - Removed amalloc/afree(), MALLOC_ALIGN and MEM_ALIGN.
    Our amalloc() had errors and never worked as intended. As the driver does
    not need more alignment than guaranteed by the allocators, amalloc() was
    removed (see commit log for details).